RIM-940: filtrere questionnaire fremsøgning på status